inbox.Deliver() implemented

--- a/rainsd/config/server.conf
+++ b/rainsd/config/server.conf
@@ -4,6 +4,8 @@
 "MaxConnections": 1000,
 "KeepAlivePeriod": 60000000000,
 "TCPTimeout": 300000000000,
+"PrioBufferSize": 10000,
+"NormalBufferSize": 100000,
 "CertificateFile": "config/server.crt",
 "PrivateKeyFile": "config/server.key"
 }
