inbox buffers incoming msg and hands them over to verify

--- a/rainsd/config/server.conf
+++ b/rainsd/config/server.conf
@@ -6,6 +6,8 @@
 "TCPTimeout": 300000000000,
 "PrioBufferSize": 10000,
 "NormalBufferSize": 100000,
+"PrioWorkerSize": 2,
+"NormalWorkerSize": 10,
 "CertificateFile": "config/server.crt",
 "PrivateKeyFile": "config/server.key"
 }
