first draft of verify

--- a/rainsd/config/server.conf
+++ b/rainsd/config/server.conf
@@ -8,6 +8,8 @@
 "NormalBufferSize": 100000,
 "PrioWorkerSize": 2,
 "NormalWorkerSize": 10,
+"ZoneKeyCacheSize":1000
+"ActiveQueryCacheSize":1000
 "CertificateFile": "config/server.crt",
 "PrivateKeyFile": "config/server.key"
 }
