refactoring inbox, internal representation of Rains messages etc

--- a/rainsd/config/server.conf
+++ b/rainsd/config/server.conf
@@ -8,8 +8,11 @@
 "NormalBufferSize": 100000,
 "PrioWorkerSize": 2,
 "NormalWorkerSize": 10,
-"ZoneKeyCacheSize":1000
-"ActiveQueryCacheSize":1000
+"ZoneKeyCacheSize":1000,
+"PendingSignatureCacheSize":1000,
+"AssertionCacheSize": 10000,
+"PendingQueryCacheSize": 100,
+"CapabilitiesCacheSize": 100,
 "CertificateFile": "config/server.crt",
 "PrivateKeyFile": "config/server.key"
 }
