adaptions resultet from meeting with Brian, especially notification handling

--- a/rainsd/config/server.conf
+++ b/rainsd/config/server.conf
@@ -4,10 +4,13 @@
 "MaxConnections": 1000,
 "KeepAlivePeriod": 60000000000,
 "TCPTimeout": 300000000000,
+"MaxMsgLength": 20000,
 "PrioBufferSize": 10000,
 "NormalBufferSize": 100000,
+"NotificationBufferSize": 50,
 "PrioWorkerSize": 2,
 "NormalWorkerSize": 10,
+"NotificationWorkerSize":1,
 "ZoneKeyCacheSize":1000,
 "PendingSignatureCacheSize":1000,
 "AssertionCacheSize": 10000,
