--- a/server/config/server.conf
+++ b/server/config/server.conf
@@ -2,9 +2,9 @@
 "ServerIPAddr": "127.0.0.1",
 "ServerPort": 5022,
 "MaxConnections": 1000,
-"KeepAlivePeriod": 60000000000,
-"TCPTimeout": 300000000000,
-"MaxMsgLength": 20000,
+"KeepAlivePeriodMicros": 60000000000,
+"TCPTimeoutMicros": 300000000000,
+"MaxMsgByteLength": 20000,
 "PrioBufferSize": 10000,
 "NormalBufferSize": 100000,
 "NotificationBufferSize": 50,
