loadConfig and keys implemented for rainspub

--- a/rainspub/config/rainspub.conf
+++ b/rainspub/config/rainspub.conf
@@ -1,13 +1,10 @@
 {
-"AssertionValidity": "100000000",
-"ShardValidity": "100000000",
-"ZoneValidity": "100000000",
+"AssertionValidity": 86400000000000,
+"DelegationValidity": 86400000000000,
+"ShardValidity": 86400000000000,
+"ZoneValidity": 86400000000000,
 "MaxAssertionsPerShard": 5,
-"ServerAddresses": [
-    {
-        "Type" : 1,
-        "IPAddr": "127.0.0.1",
-        "Port": 5022
-    }
-]
+"ZoneFilePath":"zoneFiles/zf_ethz.ch.txt",
+"ZonePrivateKeyPath": "keys/zonePrivate.key",
+"ZonePublicKeyPath": "keys/zonePublic.key"
 }
