moved ConnInfo from server to rainslib, changed structure of ConnInfo from IPaddr&port to net.TcpAddr so we are able to use json unmarshal to read in ip addr from config file.

--- a/server/config/rainspub.conf
+++ b/server/config/rainspub.conf
@@ -4,6 +4,7 @@
 "ShardValidity": 86400000000000,
 "ZoneValidity": 86400000000000,
 "MaxAssertionsPerShard": 5,
+"ServerAddresses": [{"Type":0, "TCPAddr":{"IP":"127.0.0.1","Port":5022,"Zone":""}}],
 "ZoneFilePath":"zoneFiles/chZoneFile.txt",
 "ZonePrivateKeyPath": "keys/zonePrivate.key",
 "ZonePublicKeyPath": "keys/zonePublic.key"
