--- a/server/config/rainspub.conf
+++ b/server/config/rainspub.conf
@@ -6,6 +6,7 @@
 "MaxAssertionsPerShard": 5,
 "ServerAddresses": [{"Type":0, "TCPAddr":{"IP":"127.0.0.1","Port":5022,"Zone":""}}],
 "ZoneFilePath":"zoneFiles/chZoneFile.txt",
+"ZoneFileDelegationPath":"zoneFiles/chZoneDelegation.txt",
 "ZonePrivateKeyPath": "keys/zonePrivate.key",
 "ZonePublicKeyPath": "keys/zonePublic.key"
 }
