bug fixing, replacing rainslib.Ed25519PublicKey with ed25519.PublicKey

--- a/server/config/rainspub.conf
+++ b/server/config/rainspub.conf
@@ -1,12 +1,13 @@
 {
-"AssertionValidity": 86400000000000,
-"DelegationValidity": 86400000000000,
-"ShardValidity": 86400000000000,
-"ZoneValidity": 86400000000000,
+"AssertionValidity": 86400,
+"DelegationValidity": 86400,
+"ShardValidity": 86400,
+"ZoneValidity": 86400,
 "MaxAssertionsPerShard": 5,
-"ServerAddresses": [{"Type":0, "TCPAddr":{"IP":"127.0.0.1","Port":5022,"Zone":""}}],
+"ServerAddresses": [{"Type":"TCP", "TCPAddr":{"IP":"127.0.0.1","Port":5022,"Zone":""}}],
 "ZoneFilePath":"zoneFiles/chZoneFile.txt",
 "ZoneFileDelegationPath":"zoneFiles/chZoneDelegation.txt",
 "ZonePrivateKeyPath": "keys/zonePrivate.key",
-"ZonePublicKeyPath": "keys/zonePublic.key"
+"ZonePublicKeyPath": "keys/zonePublic.key",
+"RootPrivateKeyPath": "keys/rootPrivate.key"
 }
