basic workflow is running again

--- a/server/config/server.conf
+++ b/server/config/server.conf
@@ -1,10 +1,12 @@
 {
     "RootZonePublicKeyPath":        "keys/selfSignedRootDelegationAssertion.gob",
-    "ServerAddrType":               "TCP",
-    "ServerTCPAddr":                {
-                                        "IP":"127.0.0.1", 
-                                        "Port":5022, 
-                                        "Zone":""
+    "ServerAddress":                {
+                                        "Type":     "TCP", 
+                                        "TCPAddr":  {
+                                                        "IP":"127.0.0.1",
+                                                        "Port":5022,
+                                                        "Zone":""
+                                                    }
                                     },
     "MaxConnections":               1000, 
     "KeepAlivePeriod":              60, 
