--- a/server/config/server.conf
+++ b/server/config/server.conf
@@ -17,7 +17,8 @@
     "PrioBufferSize":               1000, 
     "NormalBufferSize":             100000, 
     "PrioWorkerCount":              2,
-	"NormalWorkerCount":            10, 
+	"NormalWorkerCount":            10,
+    "ActiveTokenCacheSize":         1000, 
     "ZoneKeyCacheSize":             1000, 
     "PendingSignatureCacheSize":    1000, 
     "AssertionCacheSize":           10000, 
