more unit tests for rainspub

--- a/rainspub/test/rainspub2.conf
+++ b/rainspub/test/rainspub2.conf
@@ -10,6 +10,6 @@
 "MaxAssertionsPerShard": 5,
 "ServerAddresses": [{"Type":"TCP", "TCPAddr":{"IP":"127.0.0.1","Port":5022,"Zone":""}},
 {"Type":"TCP", "TCPAddr":{"IP":"127.0.0.1","Port":5023,"Zone":""}}],
-"ZoneFilePath":"zoneFiles/chZoneFile.txt",
+"ZoneFilePath":"test/chZoneFile.txt",
 "ZonePrivateKeyPath": "test/zonePrivate.key"
 }
