--- a/server/config/server.conf
+++ b/server/config/server.conf
@@ -1,21 +1,47 @@
 {
-"ServerIPAddr": "127.0.0.1",
-"ServerPort": 5022,
-"MaxConnections": 1000,
-"KeepAlivePeriodMicros": 60000000000,
-"TCPTimeoutMicros": 300000000000,
-"MaxMsgByteLength": 20000,
-"PrioBufferSize": 10000,
-"NormalBufferSize": 100000,
-"NotificationBufferSize": 50,
-"PrioWorkerSize": 2,
-"NormalWorkerSize": 10,
-"NotificationWorkerSize":1,
-"ZoneKeyCacheSize":1000,
-"PendingSignatureCacheSize":1000,
-"AssertionCacheSize": 10000,
-"PendingQueryCacheSize": 100,
-"CapabilitiesCacheSize": 100,
-"CertificateFile": "config/server.crt",
-"PrivateKeyFile": "config/server.key"
+    "RootZonePublicKeyPath":        "keys/selfSignedRootDelegationAssertion.gob",
+    "ServerAddress":                {
+                                        "Type":     "TCP", 
+                                        "TCPAddr":  {
+                                                        "IP":"127.0.0.1",
+                                                        "Port":5022,
+                                                        "Zone":""
+                                                    }
+                                    },
+    "MaxConnections":               1000, 
+    "KeepAlivePeriod":              60, 
+    "TCPTimeout":                   300,
+	"TLSCertificateFile":           "config/server.crt", 
+    "TLSPrivateKeyFile":            "config/server.key", 
+    "MaxMsgByteLength":             65536, 
+    "PrioBufferSize":               1000, 
+    "NormalBufferSize":             100000, 
+    "PrioWorkerCount":              2,
+	"NormalWorkerCount":            10, 
+    "ZoneKeyCacheSize":             1000, 
+    "PendingSignatureCacheSize":    1000, 
+    "AssertionCacheSize":           10000, 
+    "PendingQueryCacheSize":        100, 
+    "CapabilitiesCacheSize":        50,
+	"NotificationBufferSize":       20, 
+    "NotificationWorkerCount":      2, 
+    "PeerToCapCacheSize":           1000, 
+    "Capabilities":                 ["urn:x-rains:tlssrv"],
+    "InfrastructureKeyCacheSize":   10,
+	"ExternalKeyCacheSize":         5, 
+    "DelegationQueryValidity":      5, 
+    "NegativeAssertionCacheSize":   500, 
+    "AddressQueryValidity":         5, 
+    "QueryValidity":                5,
+	"MaxCacheValidity":             {   
+                                        "AssertionValidity": 720, 
+                                        "ShardValidity": 720, 
+                                        "ZoneValidity": 720, 
+                                        "AddressAssertionValidity": 720, 
+                                        "AddressZoneValidity": 720
+                                    },
+	"ReapVerifyTimeout":            1800, 
+    "ReapEngineTimeout":            1800,
+	"ContextAuthority":             ["."], 
+    "ZoneAuthority":                ["ch"]
 }
