added interface test for capability and connection cache, bug fixes

--- a/examples/serverCH/config/server.conf
+++ b/examples/serverCH/config/server.conf
@@ -20,6 +20,8 @@
     "NormalWorkerCount":            10,
     "ActiveTokenCacheSize":         1000,
     "ZoneKeyCacheSize":             1000,
+    "ZoneKeyCacheWarnSize":         750,
+    "MaxPublicKeysPerZone":         5,
     "PendingSignatureCacheSize":    1000,
     "AssertionCacheSize":           10000,
     "PendingQueryCacheSize":        100,
@@ -34,7 +36,7 @@
     "NegativeAssertionCacheSize":   500,
     "AddressQueryValidity":         5,
     "QueryValidity":                5,
-    "MaxCacheValidity":             {  
+    "MaxCacheValidity":             {
                                         "AssertionValidity": 720,
                                         "ShardValidity": 720,
                                         "ZoneValidity": 720,
