--- a/example/serverRoot/config/server.conf
+++ b/example/serverRoot/config/server.conf
@@ -22,7 +22,7 @@
     "ZoneKeyCacheSize":             1000,
     "ZoneKeyCacheWarnSize":         750,
     "MaxPublicKeysPerZone":         5,
-    "PendingSignatureCacheSize":    1000,
+    "PendingKeyCacheSize":          1000,
     "AssertionCacheSize":           10000,
     "PendingQueryCacheSize":        100,
     "CapabilitiesCacheSize":        50,
