implemented pending query workflow

--- a/example/serverCH/config/server.conf
+++ b/example/serverCH/config/server.conf
@@ -25,6 +25,8 @@
     "PendingKeyCacheSize":          1000,
     "AssertionCacheSize":           10000,
     "PendingQueryCacheSize":        100,
+    "RedirectionCacheSize":         1000,
+    "RedirectionCacheWarnSize":     750,
     "CapabilitiesCacheSize":        50,
     "NotificationBufferSize":       20,
     "NotificationWorkerCount":      2,
