--- a/example/serverRoot/config/server.conf
+++ b/example/serverRoot/config/server.conf
@@ -24,7 +24,9 @@
     "MaxPublicKeysPerZone":         5,
     "PendingKeyCacheSize":          1000,
     "AssertionCacheSize":           10000,
-    "PendingQueryCacheSize":        100,
+    "PendingQueryCacheSize":        1000,
+    "RedirectionCacheSize":         1000,
+    "RedirectionCacheWarnSize":     750,
     "CapabilitiesCacheSize":        50,
     "NotificationBufferSize":       20,
     "NotificationWorkerCount":      2,
