load private keys in rainspub

--- a/zonepub/data/zonepub.conf
+++ b/zonepub/data/zonepub.conf
@@ -1,6 +1,6 @@
 {
     "ZonefilePath": "data/zonefile.txt",
-	"PrivateKeyPath": "data/privateKeys.txt",
+	"PrivateKeyPath": "data/privatekeys.txt",
 	"DoSharding": false,
 	"NofAssertionsPerShard": 10,
 	"AddSignatureMetaData": true,
