--- a/zonepub/data/zonepub.conf
+++ b/zonepub/data/zonepub.conf
@@ -1,21 +1,32 @@
 {
     "ZonefilePath": "data/zonefile.txt",
+	"AuthServers": [{
+						"Type":     "TCP",
+						"TCPAddr":  {
+										"IP":   "127.0.0.1",
+										"Port": 5022,
+										"Zone": ""
+									}
+					}],
 	"PrivateKeyPath": "data/privatekeys.txt",
-	"DoSharding": false,
-	"NofAssertionsPerShard": 10,
+	"DoSharding": true,
+	"KeepExistingShards": false,
+	"NofAssertionsPerShard": 3,
+	"MaxShardSize": -1,
 	"AddSignatureMetaData": true,
+	"AddSigMetaDataToAssertions": true,
+	"AddSigMetaDataToShards": true,
 	"SignatureAlgorithm": 1,
-	"KeyPhase": 1,
-	"SigValidSince": 10,
-	"SigValidUntil": 20,
-	"SigSigningInterval": 900,
+	"KeyPhase": 0,
+	"SigValidSince": 10000,
+	"SigValidUntil": 20000,
+	"SigSigningInterval": 60,
 	"DoConsistencyCheck": false,
 	"SortShards": false,
 	"SigNotExpired": false,
 	"CheckStringFields": false,
 	"DoSigning": false,
-	"SignAssertions": false,
-	"SignShards": false,
-	"OutputFilePath": false,
+	"MaxZoneSize": 50000,
+	"OutputPath": "data/newZonefile.txt",
 	"DoPublish": false
 }
