--- a/zonepub/data/zonepub.conf
+++ b/zonepub/data/zonepub.conf
@@ -11,8 +11,8 @@
 	"PrivateKeyPath": "data/privatekeys.txt",
 	"DoSharding": true,
 	"KeepExistingShards": false,
-	"NofAssertionsPerShard": 3,
 	"MaxShardSize": -1,
+	"NofAssertionsPerShard": 1,
 	"AddSignatureMetaData": true,
 	"AddSigMetaDataToAssertions": true,
 	"AddSigMetaDataToShards": true,
@@ -22,7 +22,7 @@
 	"SigValidUntil": 20000,
 	"SigSigningInterval": 60,
 	"DoConsistencyCheck": false,
-	"SortShards": false,
+	"SortShards": true,
 	"SigNotExpired": false,
 	"CheckStringFields": false,
 	"DoSigning": false,
