improved makefile to modify generated zonefileDecoder to be usable in zonefileParser. Added Readme to yacc generator. Bug fixes. Started updating rainspub with pshards. Added new parameters to man/zpub.

--- a/yacc/makefile
+++ b/yacc/makefile
@@ -2,8 +2,14 @@ all:
 	goyacc -p "ZFP" zonefileParser.y
 	go build -o zonefileParser y.go
 	./zonefileParser
+	sed -i 's/package main/package zoneFileParser/g' y.go
+	sed -i 's/"github.com\/netsec-ethz\/rains\/utils\/zoneFileParser"//' y.go
+	sed -i 's/zoneFileParser.T/T/g' y.go
+	sed -i '0,/Lookahead()/{s/Lookahead() int/Lookahead() int\n    Result() []rainslib.MessageSectionWithSigForward/}' y.go
+	sed -i 's/func ZFPNewParser()/func (p *ZFPParserImpl) Result() []rainslib.MessageSectionWithSigForward {\n\    return output\n}\nfunc ZFPNewParser()/g' y.go
+	mv y.go zoneFileDecoderGenerated.go
 
 clean:
-	rm y.go
+	rm zoneFileDecoderGenerated.go
 	rm y.output
 	rm zonefileParser
