Psharding in rainspub

--- a/zonepub/data/zonepub.conf
+++ b/zonepub/data/zonepub.conf
@@ -13,6 +13,13 @@
 	"KeepExistingShards": false,
 	"MaxShardSize": -1,
 	"NofAssertionsPerShard": 1,
+	"DoPsharding" : false,
+	"KeepExistingPshards" : true,
+	"NofAssertionsPerPshard" : 1,
+	"Hashfamily" : [5],
+	"NofHashFunctions" : 1,
+	"BFOpMode" : 1,
+	"BloomFilterSize" : 80,
 	"AddSignatureMetaData": true,
 	"AddSigMetaDataToAssertions": true,
 	"AddSigMetaDataToShards": true,
