Zonepub bug fixes for pshards

--- a/zonepub/data/zonepub.conf
+++ b/zonepub/data/zonepub.conf
@@ -13,8 +13,8 @@
 	"KeepExistingShards": false,
 	"MaxShardSize": -1,
 	"NofAssertionsPerShard": 1,
-	"DoPsharding" : false,
-	"KeepExistingPshards" : true,
+	"DoPsharding" : true,
+	"KeepExistingPshards" : false,
 	"NofAssertionsPerPshard" : 1,
 	"Hashfamily" : [5],
 	"NofHashFunctions" : 1,
@@ -23,6 +23,7 @@
 	"AddSignatureMetaData": true,
 	"AddSigMetaDataToAssertions": true,
 	"AddSigMetaDataToShards": true,
+	"AddSigMetaDataToPshards": true,
 	"SignatureAlgorithm": 1,
 	"KeyPhase": 0,
 	"SigValidSince": 10000,
