publisher works with new config format

--- a/cmd/zonepub/data/zonepub.conf
+++ b/cmd/zonepub/data/zonepub.conf
@@ -8,31 +8,41 @@
 										"Zone": ""
 									}
 					}],
-	"PrivateKeyPath": "data/privatekeys.txt",
-	"DoSharding": true,
-	"KeepExistingShards": false,
-	"MaxShardSize": -1,
-	"NofAssertionsPerShard": 1,
-	"DoPsharding" : true,
-	"KeepExistingPshards" : false,
-	"NofAssertionsPerPshard" : 1,
-	"Hashfamily" : [5],
-	"NofHashFunctions" : 1,
-	"BFOpMode" : 1,
-	"BloomFilterSize" : 80,
-	"AddSignatureMetaData": true,
-	"AddSigMetaDataToAssertions": true,
-	"AddSigMetaDataToShards": true,
-	"AddSigMetaDataToPshards": true,
-	"SignatureAlgorithm": 1,
-	"KeyPhase": 0,
-	"SigValidSince": 10000,
-	"SigValidUntil": 20000,
-	"SigSigningInterval": 60,
-	"DoConsistencyCheck": false,
-	"SortShards": true,
-	"SigNotExpired": false,
-	"CheckStringFields": false,
+	"PrivateKeyPath": "keys/rootPrivateKey.txt",
+	"ShardingConf" : {
+		"DoSharding": true,
+		"KeepExistingShards": false,
+		"MaxShardSize": -1,
+		"NofAssertionsPerShard": 1
+	},
+	"PShardingConf" : {
+		"DoPsharding" : true,
+		"KeepExistingPshards" : false,
+		"NofAssertionsPerPshard" : 2,
+		"BloomFilterConf" : {
+			"Hashfamily" : [5],
+			"NofHashFunctions" : 1,
+			"BFOpMode" : 1,
+			"BloomFilterSize" : 80
+		}
+	},
+	"MetaDataConf" : {
+		"AddSignatureMetaData": true,
+		"AddSigMetaDataToAssertions": true,
+		"AddSigMetaDataToShards": true,
+		"AddSigMetaDataToPshards": true,
+		"SignatureAlgorithm": 1,
+		"KeyPhase": 1,
+		"SigValidSince": 10000,
+		"SigValidUntil": 20000,
+		"SigSigningInterval": 60
+	},
+	"ConsistencyConf" : {
+		"DoConsistencyCheck": false,
+		"SortShards": true,
+		"SigNotExpired": false,
+		"CheckStringFields": false
+	},
 	"DoSigning": false,
 	"MaxZoneSize": 50000,
 	"OutputPath": "data/newZonefile.txt",
