some more bug fixed

--- a/examples/rainsdServer/config/publisher.conf
+++ b/examples/rainsdServer/config/publisher.conf
@@ -32,7 +32,7 @@
 		"AddSigMetaDataToShards": true,
 		"AddSigMetaDataToPshards": true,
 		"SignatureAlgorithm": 1,
-		"KeyPhase": 1,
+		"KeyPhase": 0,
 		"SigValidSince": 10000,
 		"SigValidUntil": 20000,
 		"SigSigningInterval": 60
@@ -43,7 +43,7 @@
 		"SigNotExpired": false,
 		"CheckStringFields": false
 	},
-	"DoSigning": false,
+	"DoSigning": true,
 	"MaxZoneSize": 50000,
 	"OutputPath": "data/newZonefile.txt",
 	"DoPublish": true
