--- a/examples/rainsdServer/config/publisher.conf
+++ b/examples/rainsdServer/config/publisher.conf
@@ -12,7 +12,7 @@
 	"ShardingConf" : {
 		"DoSharding": true,
 		"KeepExistingShards": false,
-		"MaxShardSize": -1,
+		"MaxShardSize": -1, 
 		"NofAssertionsPerShard": 1
 	},
 	"PShardingConf" : {
@@ -33,8 +33,8 @@
 		"AddSigMetaDataToPshards": true,
 		"SignatureAlgorithm": 1,
 		"KeyPhase": 0,
-		"SigValidSince": 10000,
-		"SigValidUntil": 20000,
+		"SigValidSince": 1549357669,
+		"SigValidUntil": 1549444069,
 		"SigSigningInterval": 60
 	},
 	"ConsistencyConf" : {
