Added tld names. Simulation setup of servers

--- a/cmd/simulation/conf/resolver0.conf
+++ b/cmd/simulation/conf/resolver0.conf
@@ -11,11 +11,11 @@
     "MaxConnections":               1000,
     "KeepAlivePeriod":              60,
     "TCPTimeout":                   300,
-    "TLSCertificateFile":           "config/server.crt",
-    "TLSPrivateKeyFile":            "config/server.key",
+    "TLSCertificateFile":           "cert/server.crt",
+    "TLSPrivateKeyFile":            "cert/server.key",
     "MaxMsgByteLength":             65536,
-    "PrioBufferSize":               1000,
-    "NormalBufferSize":             100000,
+    "PrioBufferSize":               20,
+    "NormalBufferSize":             100,
     "PrioWorkerCount":              2,
     "NormalWorkerCount":            10,
     "ActiveTokenCacheSize":         1000,
@@ -28,14 +28,14 @@
     "RedirectionCacheSize":         1000,
     "RedirectionCacheWarnSize":     750,
     "CapabilitiesCacheSize":        50,
-    "NotificationBufferSize":       20,
+    "NotificationBufferSize":       10,
     "NotificationWorkerCount":      2,
     "PeerToCapCacheSize":           1000,
     "Capabilities":                 ["urn:x-rains:tlssrv"],
-    "InfrastructureKeyCacheSize":   10,
-    "ExternalKeyCacheSize":         5,
+    "InfrastructureKeyCacheSize":   1,
+    "ExternalKeyCacheSize":         1,
     "DelegationQueryValidity":      5,
-    "NegativeAssertionCacheSize":   500,
+    "NegativeAssertionCacheSize":   1000,
     "AddressQueryValidity":         5,
     "QueryValidity":                5,
     "MaxCacheValidity":             {
