Simulation: publisher is used to sign the content of the zonefile and push it to the naming servers. private keys are stored during zone generation

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ _testmain.go
 
 #example
 examples/test
+
+#simulation generated files
+cmd/conf/*
+cmd/keys/privateKey*
+!cmd/keys/privateKeyroot.txt
+cmd/zonefiles/*
