--- a/examples/rainsdServer/config/server.conf
+++ b/examples/rainsdServer/config/server.conf
@@ -42,7 +42,7 @@
                                         "AssertionValidity": 720,
                                         "ShardValidity": 720,
                                         "ZoneValidity": 720,
-                                        "AddressAssertionValidity": 720,
+                                        "AddressAssertionValidity": 720
                                     },
     "ReapVerifyTimeout":            1800,
     "ReapEngineTimeout":            1800,
