Simulation: Bug fixes, caching resolver start up but recursive resolver is not yet working

--- a/cmd/simulation/conf/publisher.conf
+++ b/cmd/simulation/conf/publisher.conf
@@ -11,13 +11,13 @@
 	"PrivateKeyPath": "keys/privateKey.txt",
 	"ShardingConf" : {
 		"DoSharding": false,
-		"KeepExistingShards": false,
+		"KeepExistingShards": true,
 		"MaxShardSize": -1, 
 		"NofAssertionsPerShard": 1
 	},
 	"PShardingConf" : {
 		"DoPsharding" : false,
-		"KeepExistingPshards" : false,
+		"KeepExistingPshards" : true,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
 			"Hashfamily" : [5],
