--- a/cmd/simulation/makefile
+++ b/cmd/simulation/makefile
@@ -1,10 +1,10 @@
 all:
-	rm -r zonefiles/*
-	rm -r keys/*
+	rm -rf zonefiles/*
+	rm -rf keys/*
 	find conf -type f -not -name 'namingServer.conf' -not -name 'publisher.conf' -not -name 'resolver.conf' -delete
 	go run simulation.go
 
 clean:
-	rm -r zonefiles/*
-	rm -r keys/*
+	rm -rf zonefiles/*
+	rm -rf keys/*
 	find conf -type f -not -name 'namingServer.conf' -not -name 'publisher.conf' -not -name 'resolver.conf' -delete
