Simulation: Bug fix in zoneKeyCache, added string method to enums

--- a/cmd/simulation/conf/publisher.conf
+++ b/cmd/simulation/conf/publisher.conf
@@ -1,14 +1,14 @@
 {
-    "ZonefilePath": "zonefiles/zf_.txt",
+    "ZonefilePath": "ZonefilePathValue.txt",
 	"AuthServers": [{
 						"Type":     "TCP",
 						"TCPAddr":  {
 										"IP":   "127.0.0.1",
-										"Port": 5022,
+										"Port": PortValue,
 										"Zone": ""
 									}
 					}],
-	"PrivateKeyPath": "keys/privateKey.txt",
+	"PrivateKeyPath": "PrivateKeyPathValue.txt",
 	"ShardingConf" : {
 		"DoSharding": false,
 		"KeepExistingShards": true,
@@ -33,8 +33,8 @@
 		"AddSigMetaDataToPshards": true,
 		"SignatureAlgorithm": 1,
 		"KeyPhase": 1,
-		"SigValidSince": 1549357669,
-		"SigValidUntil": 1549444069,
+		"SigValidSince": SigValidSinceValue,
+		"SigValidUntil": SigValidUntilValue,
 		"SigSigningInterval": 60
 	},
 	"ConsistencyConf" : {
