--- a/cmd/simulation/conf/resolver.conf
+++ b/cmd/simulation/conf/resolver.conf
@@ -1,10 +1,10 @@
 {
-    "RootZonePublicKeyPath":        "keys/selfSignedRootDelegationAssertion.gob",
+    "RootZonePublicKeyPath":        "RootZonePublicKeyPathValue",
     "ServerAddress":                {
                                         "Type":     "TCP",
                                         "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
-                                                        "Port": 5022,
+                                                        "Port": PortValue,
                                                         "Zone": ""
                                                     }
                                     },
