Fixes config errors in integration test. Implements ZonefileParser Decode method

--- a/test/integration/testdata/conf/namingServerethz.ch.conf
+++ b/test/integration/testdata/conf/namingServerethz.ch.conf
@@ -11,8 +11,8 @@
     "MaxConnections":               1000,
     "KeepAlivePeriod":              60,
     "TCPTimeout":                   300,
-    "TLSCertificateFile":           "cert/server.crt",
-    "TLSPrivateKeyFile":            "cert/server.key",
+    "TLSCertificateFile":           "testdata/cert/server.crt",
+    "TLSPrivateKeyFile":            "testdata/cert/server.key",
     "MaxMsgByteLength":             65536,
     "PrioBufferSize":               20,
     "NormalBufferSize":             100,
