--- a/test/integration/testdata/conf/namingServerch.conf
+++ b/test/integration/testdata/conf/namingServerch.conf
@@ -1,5 +1,5 @@
 {
-    "RootZonePublicKeyPath":        "keys/selfSignedRootDelegationAssertion.gob",
+    "RootZonePublicKeyPath":        "testdata/keys/selfSignedRootDelegationAssertion.gob",
     "ServerAddress":                {
                                         "Type":     "TCP",
                                         "TCPAddr":  {
@@ -11,8 +11,8 @@
     "MaxConnections":               1000,
     "KeepAlivePeriod":              60,
     "TCPTimeout":                   300,
-    "TLSCertificateFile":           "cert/server.crt",
-    "TLSPrivateKeyFile":            "cert/server.key",
+    "TLSCertificateFile":           "testdata/cert/server.crt",
+    "TLSPrivateKeyFile":            "testdata/cert/server.key",
     "MaxMsgByteLength":             65536,
     "PrioBufferSize":               20,
     "NormalBufferSize":             100,
