--- a/test/integration/testdata/conf/publisherethz.ch.conf
+++ b/test/integration/testdata/conf/publisherethz.ch.conf
@@ -1,5 +1,5 @@
 {
-    "ZonefilePath": "zonefiles/ethz.ch.txt",
+    "ZonefilePath": "testdata/zonefiles/ethz.ch.txt",
 	"AuthServers": [{
 						"Type":     "TCP",
 						"TCPAddr":  {
@@ -8,7 +8,7 @@
 										"Zone": ""
 									}
 					}],
-	"PrivateKeyPath": "keys/privateKeyethz.ch.txt",
+	"PrivateKeyPath": "testdata/keys/privateKeyethz.ch.txt",
 	"ShardingConf" : {
 		"DoSharding": false,
 		"KeepExistingShards": true,
