Zone's only contain Assertions. Large updates to zoneFile.IO and zonepublisher

--- a/test/integration/testdata/conf/publisherethz.ch.conf
+++ b/test/integration/testdata/conf/publisherethz.ch.conf
@@ -10,14 +10,14 @@
 					}],
 	"PrivateKeyPath": "testdata/keys/privateKeyethz.ch.txt",
 	"ShardingConf" : {
+		"IncludeShards": true,
 		"DoSharding": false,
-		"KeepExistingShards": true,
 		"MaxShardSize": -1, 
 		"NofAssertionsPerShard": 1
 	},
 	"PShardingConf" : {
+		"IncludePshards": true,
 		"DoPsharding" : false,
-		"KeepExistingPshards" : true,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
 			"Hashfamily" : [5],
@@ -40,6 +40,7 @@
 	"ConsistencyConf" : {
 		"DoConsistencyCheck": false,
 		"SortShards": true,
+		"SortZone": true,
 		"SigNotExpired": false,
 		"CheckStringFields": false
 	},
