--- a/cmd/zonepub/data/zonepub.conf
+++ b/cmd/zonepub/data/zonepub.conf
@@ -10,14 +10,14 @@
 					}],
 	"PrivateKeyPath": "keys/rootPrivateKey.txt",
 	"ShardingConf" : {
+		"IncludeShards" : true,
 		"DoSharding": true,
-		"KeepExistingShards": false,
 		"MaxShardSize": -1,
 		"NofAssertionsPerShard": 1
 	},
 	"PShardingConf" : {
+		"IncludePshards" : true,
 		"DoPsharding" : true,
-		"KeepExistingPshards" : false,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
 			"Hashfamily" : [5],
@@ -40,6 +40,7 @@
 	"ConsistencyConf" : {
 		"DoConsistencyCheck": false,
 		"SortShards": true,
+		"SortZone": true,
 		"SigNotExpired": false,
 		"CheckStringFields": false
 	},
