--- a/test/integration/testdata/conf/namingServerethz.ch.conf
+++ b/test/integration/testdata/conf/namingServerethz.ch.conf
@@ -8,6 +8,13 @@
                                                         "Zone": ""
                                                     }
                                     },
+    "PublisherAddress":             {
+                                        "Type":     "TCP",
+                                        "TCPAddr":  {
+                                                        "IP":   "127.0.0.1",
+                                                        "Zone": ""
+                                                    }
+                                    },
     "MaxConnections":               1000,
     "KeepAlivePeriod":              60,
     "TCPTimeout":                   300,
