Adds connection.Info again to be able to unmarshal json config

--- a/test/integration/testdata/conf/namingServerch.conf
+++ b/test/integration/testdata/conf/namingServerch.conf
@@ -2,17 +2,15 @@
     "RootZonePublicKeyPath":        "testdata/keys/selfSignedRootDelegationAssertion.gob",
     "ServerAddress":                {
                                         "Type":     "TCP",
-                                        "TCPAddr":  {
+                                        "Addr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Port": 5023,
-                                                        "Zone": ""
                                                     }
                                     },
     "PublisherAddress":             {
                                         "Type":     "TCP",
-                                        "TCPAddr":  {
+                                        "Addr":  {
                                                         "IP":   "127.0.0.1",
-                                                        "Zone": ""
                                                     }
                                     },
     "MaxConnections":               1000,
