--- a/test/integration/testdata/conf/namingServerRoot.conf
+++ b/test/integration/testdata/conf/namingServerRoot.conf
@@ -2,7 +2,7 @@
     "RootZonePublicKeyPath":        "testdata/keys/selfSignedRootDelegationAssertion.gob",
     "ServerAddress":                {
                                         "Type":     "TCP",
-                                        "TCPAddr":  {
+                                        "Addr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Port": 5022,
                                                         "Zone": ""
@@ -10,7 +10,7 @@
                                     },
     "PublisherAddress":             {
                                         "Type":     "TCP",
-                                        "TCPAddr":  {
+                                        "Addr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Zone": ""
                                                     }
