--- a/test/integration/testdata/conf/publisherethz.ch.conf
+++ b/test/integration/testdata/conf/publisherethz.ch.conf
@@ -2,7 +2,7 @@
     "ZonefilePath": "testdata/zonefiles/ethz.ch.txt",
 	"AuthServers": [{
 						"Type":     "TCP",
-						"TCPAddr":  {
+						"Addr":  {
 										"IP":   "127.0.0.1",
 										"Port": 5024,
 										"Zone": ""
