Readds connection.Info to publisher

--- a/test/integration/testdata/conf/namingServerch.conf
+++ b/test/integration/testdata/conf/namingServerch.conf
@@ -4,13 +4,13 @@
                                         "Type":     "TCP",
                                         "Addr":  {
                                                         "IP":   "127.0.0.1",
-                                                        "Port": 5023,
+                                                        "Port": 5023
                                                     }
                                     },
     "PublisherAddress":             {
                                         "Type":     "TCP",
                                         "Addr":  {
-                                                        "IP":   "127.0.0.1",
+                                                        "IP":   "127.0.0.1"
                                                     }
                                     },
     "MaxConnections":               1000,
