use just one unit test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             go vet ./examples/...
             go vet ./cmd/...
             go vet ./test/...
-            go test -v ./internal/pkg/...
+            go test -v ./internal/pkg/section
             go test -v ./test/integration/
       - save_cache:
           key: v1-pkg-cache
