fix integration test whne working with checkpointing

--- a/test/integration/testdata/conf/resolver.conf
+++ b/test/integration/testdata/conf/resolver.conf
@@ -1,5 +1,10 @@
 {
     "RootZonePublicKeyPath":        "testdata/keys/selfSignedRootDelegationAssertion.gob",
+    "AssertionCheckPointInterval": 1,
+	"NegAssertionCheckPointInterval":1,
+	"ZoneKeyCheckPointInterval":1,
+	"CheckPointPath": "./testdata/checkpoint/resolver",
+	"PreloadCaches": false,
     "ServerAddress":                {
                                         "Type":     "TCP",
                                         "Addr":  {
