Including checkpoint test into integration test

--- a/test/integration/testdata/conf/namingServerRoot.conf
+++ b/test/integration/testdata/conf/namingServerRoot.conf
@@ -3,7 +3,7 @@
     "AssertionCheckPointInterval": 3600,
 	"NegAssertionCheckPointInterval":3600,
 	"ZoneKeyCheckPointInterval":3600,
-	"CheckPointPath": "./testdata/checkpoint/root",
+	"CheckPointPath": "testdata/checkpoint/root/",
 	"PreloadCaches": false,
     "ServerAddress":                {
                                         "Type":     "TCP",
