--- a/test/integration/testdata/conf/namingServerch.conf
+++ b/test/integration/testdata/conf/namingServerch.conf
@@ -3,7 +3,7 @@
     "AssertionCheckPointInterval": 3600,
 	"NegAssertionCheckPointInterval":3600,
 	"ZoneKeyCheckPointInterval":3600,
-	"CheckPointPath": "./testdata/checkpoint/ch",
+	"CheckPointPath": "testdata/checkpoint/ch/",
 	"PreLoadCaches": false,
     "ServerAddress":                {
                                         "Type":     "TCP",
