--- a/test/integration/testdata/conf/namingServerethz.ch.conf
+++ b/test/integration/testdata/conf/namingServerethz.ch.conf
@@ -3,7 +3,7 @@
     "AssertionCheckPointInterval": 3600,
 	"NegAssertionCheckPointInterval":3600,
 	"ZoneKeyCheckPointInterval":3600,
-	"CheckPointPath": "./testdata/checkpoint/ethz.ch",
+	"CheckPointPath": "testdata/checkpoint/ethz.ch/",
 	"PreloadCaches": false,
     "ServerAddress":                {
                                         "Type":     "TCP",
