--- a/test/integration/testdata/conf/resolver.conf
+++ b/test/integration/testdata/conf/resolver.conf
@@ -3,7 +3,7 @@
     "AssertionCheckPointInterval": 1,
 	"NegAssertionCheckPointInterval":1,
 	"ZoneKeyCheckPointInterval":1,
-	"CheckPointPath": "./testdata/checkpoint/resolver",
+	"CheckPointPath": "testdata/checkpoint/resolver/",
 	"PreloadCaches": false,
     "ServerAddress":                {
                                         "Type":     "TCP",
