Implements cache checkpointing and preload a cache form a checkpoint. Adds this case to the integration test

--- a/.gitignore
+++ b/.gitignore
@@ -52,9 +52,9 @@ _testmain.go
 *coverage.html
 
 #integration test files
-*assertionCheckPoint.txt
-*negAssertionCheckPoint.txt
-*zoneKeyCheckPoint.txt
+*assertionCheckPoint.gob
+*negAssertionCheckPoint.gob
+*zoneKeyCheckPoint.gob
 
 #Yacc
 /tools/yacc/y.go
