--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,12 @@ jobs:
           keys:
             - v1-pkg-cache
       - run: go get -u github.com/golang/dep/cmd/dep
+      - run: go get -u github.com/kardianos/govendor
+      - run:
+          name: get dependencies
+          command: |
+              govendor add +e
+              govendor fetch +m
       - run:
           name: run build
           command: |
