--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           name: scion,
           command: |
-            apt-get install --assume-yes libpcap0.8 libpcap0.8-dev 
+            sudo apt-get install --assume-yes libpcap0.8 libpcap0.8-dev 
             mkdir -p $GOPATH/src/github.com/scionproto/scion
             git clone https://github.com/scionproto/scion $GOPATH/src/github.com/scionproto/scion
             cd $GOPATH/src/github.com/scionproto/scion
