Try env var with quotes?

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: scionproto/scion_base
         environment:
-            GOPATH=/tmp/go
+            GOPATH="/tmp/go"
             PATH=$PATH:/tmp/go/bin
     working_directory: /tmp/go/src/github.com/netsec-ethz/rains
     steps:
